--- a/Sales_Forecasting/my_account.html
+++ b/Sales_Forecasting/my_account.html
@@ -71,7 +71,7 @@
                         E-mail Address
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value" id="user_email" type="text" placeholder="E-Mail Address" readonly />
+                        <input class="data_value" id="user_email" type="text" placeholder="E-Mail Address"  />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -79,7 +79,7 @@
                         Username
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value" id="user_username" type="text" placeholder="Username" readonly />
+                        <input class="data_value" id="user_username" type="text" placeholder="Username"  />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -114,7 +114,7 @@
                         Name
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value " id="user_name" type="text" placeholder="Name" readonly />
+                        <input class="data_value " id="user_name" type="text" placeholder="Name" />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -122,7 +122,23 @@
                        Surname
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value" id="user_surname" type="text" placeholder="Surname" readonly />
+                        <input class="data_value" id="user_surname" type="text" placeholder="Surname"  />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Age
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Age"  />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Contact Number
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Contact Number"  />
                     </div>
                 </div>
             </div>
@@ -130,10 +146,68 @@
             <div class="container-fluid text-white">
                
                 <!--Activity Details-->
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Search History</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" readonly></textarea>
+                  </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Registration Date
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Registration Date" readonly />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        My Referal Code
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="My Referal Code" readonly  />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Refered User
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Refered User" readonly />
+                    </div>
+                </div>
             </div>
 
             <div class="container-fluid text-white">
                 <!--Membership Details-->
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Active Membership
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Active Membership" readonly />
+                    </div>
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Adverts
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <button type="button" class="btn btn-success" autocomplete="on">Active</button>
+                        <button type="button" class="btn btn-danger">Deactivated</button>
+                    </div>
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Searches Remaining
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <p class="text-left">0</p>
+                    </div>
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Qualify Free Trial
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <button type="button" class="btn btn-success" autocomplete="on">Yes</button>
+                        <button type="button" class="btn btn-danger">No</button>
+                    </div>
+
+                   
+                </div>  
             </div>
 
             <div class="container-fluid text-white">
