--- a/Sales_Forecasting/my_account.html
+++ b/Sales_Forecasting/my_account.html
@@ -114,11 +114,7 @@
                         Name
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-<<<<<<< HEAD
-                        <input class="data_value " id="user_name" type="text" placeholder="Name"readonly />
-=======
-                        <input class="data_value" id="user_name" type="text" placeholder="Name" readonly />
->>>>>>> f20ebdfc2420cb4140007639a618ee5e44dc4845
+                        <input class="data_value" id="user_name" type="text" placeholder="Name"  />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -126,7 +122,7 @@
                         Surname
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value" id="user_surname" type="text" placeholder="Surname" readonly />
+                        <input class="data_value" id="user_surname" type="text" placeholder="Surname"  />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -134,7 +130,7 @@
                         Age
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value " id="user_name" type="text" placeholder="Age" readonly />
+                        <input class="data_value " id="user_name" type="text" placeholder="Age"  />
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -142,7 +138,7 @@
                         Contact Number
                     </div>
                     <div class="col-md-10 align-self-center my-col">
-                        <input class="data_value " id="user_name" type="text" placeholder="Contact Number"readonly  />
+                        <input class="data_value " id="user_name" type="text" placeholder="Contact Number"  />
                     </div>
                 </div>
             </div>
