--- a/Employee/management.html
+++ b/Employee/management.html
@@ -180,7 +180,7 @@
 
                         <label for="pwd">Project Manager Email Address</label>
                         <br />
-                        <input type="text" class="fronttext w-50" placeholder="Project Manager Email Address" id="project_manager_email" /> br />
+                        <input type="text" class="fronttext w-50" placeholder="Project Manager Email Address" id="project_manager_email" /><br />
                         <br />
 
                         <label for="pwd">Reference Email Address</label>
@@ -206,8 +206,7 @@
                         <br /><br />
                         <label for="pwd">Status</label>
                         <br />
-                        <button class="btn tn-success mt-3">Project Registered</button>
-
+                        <button class="btn btn-success mt-3">Project Registered</button>
                         <button class="btn btn-danger mt-3">Client Invoiced</button>
                         <button class="btn btn-danger mt-3">Awaiting Developer</button>
                         <button class="btn btn-danger mt-3">Project In Progress</button>
